# CodexOAuth

./: .env.example  .gitignore  CodexOAuth  README.md  SECURITY.md  codex_oauth_api.py  pyproject.toml
docs/: HOW_IT_WORKS.md  RLM.md  SETUP.md  TOOL_CALLING.md
references/: README.md  message-3-codex-openai-proxy.txt
